--- a/Hotel_Reviews_Sentiment_prediction.ipynb
+++ b/Hotel_Reviews_Sentiment_prediction.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM7y+r8JjHNUEfflwWZmwng"
+      "authorship_tag": "ABX9TyOMNUxtPALtRfiPyGgbFoHL"
     },
     "kernelspec": {
       "name": "python3",
@@ -87,79 +87,190 @@
     {
       "cell_type": "code",
       "source": [
+        "reviewData = data[\"Review\"]\n",
+        "\n",
         "tokenizer = Tokenizer()\n",
-        "tokenizer.fit_on_texts(data[\"Review\"])\n",
+        "tokenizer.fit_on_texts(reviewData)\n",
+        "reviewDataTokenized = tokenizer.texts_to_sequences(reviewData)\n",
         "\n",
-        "X = tokenizer.texts_to_sequences(data[\"Review\"])\n",
-        "\n",
-        "max_length = max([len(x) for x in X])\n",
+        "example = 2\n",
         "vocab_size = len(tokenizer.word_index)+1\n",
-        "exp_sen = 1\n",
         "\n",
         "print(\"Vocabulary size: {}\".format(vocab_size))\n",
-        "print(\"max length of sentence: {}\".format(max_length))\n",
-        "print(\"\\nExample:\\n\")\n",
-        "print(\"Sentence:\\n{}\".format(data[\"Review\"][exp_sen]))\n",
-        "print(\"\\nAfter tokenizing :\\n{}\".format(X[exp_sen]))\n",
+        "print(\"max length of sentence: {}\".format(max([len(x) for x in reviewDataTokenized])))\n",
+        "print(\"Example Sentence: {}\".format(reviewData[example]))\n",
+        "print(\"After tokenizing : {}\".format(reviewDataTokenized[example]))\n",
         "\n",
-        "X = pad_sequences(X, padding='post', maxlen=350)\n",
-        "print(\"\\nAfter padding :\\n{}\".format(X[exp_sen]))"
+        "reviewDataTokenized = pad_sequences(reviewDataTokenized, padding='post', maxlen=350)\n",
+        "print(\"After padding : \\n{}\".format(reviewDataTokenized[example]))"
+      ],
+      "metadata": {
+        "id": "xeqEoN_aWmH0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "encoding = {1: 0,\n",
+        "            2: 1,\n",
+        "            3: 2,\n",
+        "            4: 3,\n",
+        "            5: 4\n",
+        "           }\n",
+        "\n",
+        "labels = ['1', '2', '3', '4', '5']\n",
+        "           \n",
+        "y = data['Rating'].copy()\n",
+        "y.replace(encoding, inplace=True)"
+      ],
+      "metadata": {
+        "id": "7EM-wBR-j9Ne"
+      },
+      "execution_count": 88,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from re import X\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    reviewDataTokenized, y, test_size=0.33, random_state=67, stratify=y\n",
+        ")\n",
+        "\n",
+        "print(len(X_train))\n",
+        "print(len(X_test))\n",
+        "print(len(y_train))\n",
+        "print(len(y_test))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "xeqEoN_aWmH0",
-        "outputId": "64e17046-d475-4947-a858-37cbd4024400"
+        "id": "PwAwiCxuiXiI",
+        "outputId": "b20a557d-3a44-459c-bc09-2cf655dc652f"
       },
-      "execution_count": 63,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Vocabulary size: 52212\n",
-            "max length of sentence: 2012\n",
-            "\n",
-            "Example:\n",
-            "\n",
-            "Sentence:\n",
-            "ok nothing special charge diamond member hilton decided chain shot 20th anniversary seattle, start booked suite paid extra website description not, suite bedroom bathroom standard hotel room, took printed reservation desk showed said things like tv couch ect desk clerk told oh mixed suites description kimpton website sorry free breakfast, got kidding, embassy suits sitting room bathroom bedroom unlike kimpton calls suite, 5 day stay offer correct false advertising, send kimpton preferred guest website email asking failure provide suite advertised website reservation description furnished hard copy reservation printout website desk manager duty did not reply solution, send email trip guest survey did not follow email mail, guess tell concerned guest.the staff ranged indifferent not helpful, asked desk good breakfast spots neighborhood hood told no hotels, gee best breakfast spots seattle 1/2 block away convenient hotel does not know exist, arrived late night 11 pm inside run bellman busy chating cell phone help bags.prior arrival emailed hotel inform 20th anniversary half really picky wanted make sure good, got nice email saying like deliver bottle champagne chocolate covered strawberries room arrival celebrate, told needed foam pillows, arrival no champagne strawberries no foam pillows great room view alley high rise building good not better housekeeping staff cleaner room property, impressed left morning shopping room got short trips 2 hours, beds comfortable.not good ac-heat control 4 x 4 inch screen bring green shine directly eyes night, light sensitive tape controls.this not 4 start hotel clean business hotel super high rates, better chain hotels seattle,  \n",
-            "\n",
-            "After tokenizing :\n",
-            "[148, 145, 279, 340, 1653, 897, 508, 370, 991, 3104, 2590, 908, 536, 386, 71, 178, 231, 205, 399, 3267, 3, 178, 438, 46, 276, 1, 2, 100, 3105, 364, 56, 1063, 130, 141, 24, 188, 1978, 4039, 56, 1248, 121, 764, 1103, 533, 3267, 3675, 399, 1279, 62, 21, 36, 4493, 2109, 3317, 634, 2, 46, 438, 1427, 3675, 1104, 178, 41, 20, 8, 400, 1842, 4494, 5494, 1376, 3675, 1450, 411, 399, 988, 894, 10737, 786, 178, 1788, 399, 364, 3267, 1131, 208, 3505, 364, 7114, 399, 56, 337, 1715, 9, 3, 3994, 4495, 1376, 988, 48, 411, 7319, 9, 3, 2260, 988, 1692, 625, 424, 1162, 411, 28, 7, 4634, 3374, 3, 40, 137, 56, 6, 21, 1412, 825, 14822, 121, 13, 63, 13353, 39, 21, 1412, 536, 91, 30, 348, 67, 302, 1, 229, 3, 129, 4147, 108, 246, 17, 451, 703, 577, 405, 1898, 327, 26246, 2409, 440, 238, 458, 871, 322, 2355, 1, 4560, 2590, 908, 369, 27, 1136, 164, 69, 119, 6, 36, 11, 988, 803, 24, 2914, 499, 773, 994, 1256, 3752, 2, 322, 2047, 121, 274, 5495, 565, 322, 13, 773, 3752, 13, 5495, 565, 4, 2, 51, 2289, 203, 3268, 216, 6, 3, 64, 494, 7, 2431, 2, 287, 469, 126, 88, 186, 2, 36, 226, 767, 30, 204, 115, 55, 3, 6, 1132, 1091, 1478, 66, 3042, 66, 3318, 708, 271, 1220, 6096, 545, 2356, 17, 372, 3197, 8385, 4040, 721, 3, 66, 386, 1, 22, 221, 1, 569, 203, 852, 64, 991, 63, 536]\n",
-            "\n",
-            "After padding :\n",
-            "[  148   145   279   340  1653   897   508   370   991  3104  2590   908\n",
-            "   536   386    71   178   231   205   399  3267     3   178   438    46\n",
-            "   276     1     2   100  3105   364    56  1063   130   141    24   188\n",
-            "  1978  4039    56  1248   121   764  1103   533  3267  3675   399  1279\n",
-            "    62    21    36  4493  2109  3317   634     2    46   438  1427  3675\n",
-            "  1104   178    41    20     8   400  1842  4494  5494  1376  3675  1450\n",
-            "   411   399   988   894 10737   786   178  1788   399   364  3267  1131\n",
-            "   208  3505   364  7114   399    56   337  1715     9     3  3994  4495\n",
-            "  1376   988    48   411  7319     9     3  2260   988  1692   625   424\n",
-            "  1162   411    28     7  4634  3374     3    40   137    56     6    21\n",
-            "  1412   825 14822   121    13    63 13353    39    21  1412   536    91\n",
-            "    30   348    67   302     1   229     3   129  4147   108   246    17\n",
-            "   451   703   577   405  1898   327 26246  2409   440   238   458   871\n",
-            "   322  2355     1  4560  2590   908   369    27  1136   164    69   119\n",
-            "     6    36    11   988   803    24  2914   499   773   994  1256  3752\n",
-            "     2   322  2047   121   274  5495   565   322    13   773  3752    13\n",
-            "  5495   565     4     2    51  2289   203  3268   216     6     3    64\n",
-            "   494     7  2431     2   287   469   126    88   186     2    36   226\n",
-            "   767    30   204   115    55     3     6  1132  1091  1478    66  3042\n",
-            "    66  3318   708   271  1220  6096   545  2356    17   372  3197  8385\n",
-            "  4040   721     3    66   386     1    22   221     1   569   203   852\n",
-            "    64   991    63   536     0     0     0     0     0     0     0     0\n",
-            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-            "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-            "     0     0]\n"
+            "13728\n",
+            "6763\n",
+            "13728\n",
+            "6763\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow.keras.layers as L\n",
+        "from tensorflow.keras.losses import SparseCategoricalCrossentropy\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "\n",
+        "# hyper parameters\n",
+        "EPOCHS = 3\n",
+        "BATCH_SIZE = 100\n",
+        "embedding_dim = 16\n",
+        "units = 76\n",
+        "\n",
+        "model = tf.keras.Sequential([\n",
+        "    L.Embedding(vocab_size, embedding_dim, input_length=reviewDataTokenized.shape[1]),\n",
+        "    L.Bidirectional(L.LSTM(units,return_sequences=True)),\n",
+        "    #L.LSTM(units,return_sequences=True),\n",
+        "    L.Conv1D(64,3),\n",
+        "    L.MaxPool1D(),\n",
+        "    L.Flatten(),\n",
+        "    L.Dropout(0.5),\n",
+        "    L.Dense(128, activation=\"relu\"),\n",
+        "    L.Dropout(0.5),\n",
+        "    L.Dense(64, activation=\"relu\"),\n",
+        "    L.Dropout(0.5),\n",
+        "    L.Dense(5, activation=\"softmax\")\n",
+        "])\n",
+        "\n",
+        "\n",
+        "model.compile(loss=SparseCategoricalCrossentropy(),\n",
+        "              optimizer='adam',metrics=['accuracy']\n",
+        "             )\n",
+        "\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lqjrvbXriyFg",
+        "outputId": "30f5f86d-5b6e-4f99-a7d7-79fee7b13808"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_3\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " embedding_3 (Embedding)     (None, 350, 16)           835392    \n",
+            "                                                                 \n",
+            " bidirectional_3 (Bidirectio  (None, 350, 152)         56544     \n",
+            " nal)                                                            \n",
+            "                                                                 \n",
+            " conv1d_3 (Conv1D)           (None, 348, 64)           29248     \n",
+            "                                                                 \n",
+            " max_pooling1d_3 (MaxPooling  (None, 174, 64)          0         \n",
+            " 1D)                                                             \n",
+            "                                                                 \n",
+            " flatten_3 (Flatten)         (None, 11136)             0         \n",
+            "                                                                 \n",
+            " dropout_9 (Dropout)         (None, 11136)             0         \n",
+            "                                                                 \n",
+            " dense_9 (Dense)             (None, 128)               1425536   \n",
+            "                                                                 \n",
+            " dropout_10 (Dropout)        (None, 128)               0         \n",
+            "                                                                 \n",
+            " dense_10 (Dense)            (None, 64)                8256      \n",
+            "                                                                 \n",
+            " dropout_11 (Dropout)        (None, 64)                0         \n",
+            "                                                                 \n",
+            " dense_11 (Dense)            (None, 5)                 325       \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 2,355,301\n",
+            "Trainable params: 2,355,301\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history = model.fit(X_train, y_train, epochs=EPOCHS, validation_split=0.12, batch_size=BATCH_SIZE, verbose=2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4TPAky06jfM_",
+        "outputId": "c86239c6-2dff-4c53-b832-2a96d91b0efc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/3\n"
           ]
         }
       ]
